<resources>
    <string name="app_name">爱信不信</string>
    <string name="username">用户名</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="newuser">新用户</string>
    <string name="regist">注册</string>
    <string name="confirm">确定</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conversation">消息</string>
    <string name="contact">联系人</string>
    <string name="plugin">动态</string>
    <string name="mine">我</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="user_portrait">用户头像</string>
    <string name="mine_setting">账号设置</string>
    <string name="my_wallet">我的钱包</string>
    <string name="mine_service">意见反馈</string>
    <string name="mine_about">关于IXBX</string>
    <string name="main_customer_xn">智能客服</string>
    <string name="title_activity_account_setting">账号设置</string>
    <string name="change_password">密码修改</string>
    <string name="privacy">隐私</string>
    <string name="new_message_show">新消息通知</string>
    <string name="clear_cache">清理缓存</string>
    <string name="seal_set_push_language">退出登陆</string>
    <string name="exit_login">退出登陆</string>
    <string name="new_friends">新朋友</string>
    <string name="createGroup">创建群聊</string>
    <string name="title_activity_new_friend">新朋友</string>
    <string name="title_activity_create_group">创建群组</string>
    <string name="fr_group_list_not_join_the_group">暂未加入群组</string>
</resources>
