<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ebebeb"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/start_user_profile"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/avater_size"
            android:layout_height="@dimen/avater_size"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/avatar3"/>

        <TextView
            android:id="@+id/mine_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="14dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/user_portrait"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mine_setting"
        android:layout_width="match_parent"
        android:layout_height="45.5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="14dp"
            android:drawableLeft="@mipmap/mine_set"
            android:drawablePadding="14sp"
            android:text="@string/mine_setting"
            android:textColor="@color/text_color"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_wallet"
        android:layout_width="match_parent"
        android:layout_height="45.5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="14dp"
            android:drawableLeft="@mipmap/_wallet"
            android:drawablePadding="14sp"
            android:text="@string/my_wallet"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mine_service"
        android:layout_width="match_parent"
        android:layout_height="45.5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="14dp"
            android:drawableLeft="@mipmap/mine_service"
            android:drawablePadding="14sp"
            android:text="@string/mine_service"
            android:textColor="@color/text_color"
            android:textSize="16sp" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#fff">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="#dfdfdd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mine_about"
        android:layout_width="match_parent"
        android:layout_height="45.5dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="14dp"
            android:drawableLeft="@mipmap/mine_about"
            android:drawablePadding="14sp"
            android:text="@string/mine_about"
            android:textColor="@color/text_color"
            android:textSize="16sp" />


        <ImageView
            android:id="@+id/new_version_icon"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="14dp"
            android:src="@mipmap/newversion"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>